[feat] #21 이전 답변보기 조회 구현